buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        mavenCentral()
        maven {
            name = "sonatype"
            url = "https://oss.sonatype.org/content/repositories/snapshots/"
        }
        maven {
            url "https://plugins.gradle.org/m2/"
        }
        maven {
            name 'Forge'
            url 'https://files.minecraftforge.net/maven'
        }
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'
apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'

version = mod_version
group = 'mrthomas20121.naturesaura_tweaker'
archivesBaseName = 'Natures Aura Tweaker 1.18.1 '

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.18.1'

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            mods {
                naturesaura_tweaker {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            mods {
                naturesaura_tweaker {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            args '--mod', 'naturesaura_tweaker', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                naturesaura_tweaker {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {

    def ctDep = 'com.blamejared.crafttweaker:CraftTweaker-forge-1.18.1:9.0.57'
    def mcDep = 'net.minecraftforge:forge:1.18.1-39.0.79'

    minecraft mcDep
    compileOnly(ctDep)
    runtimeOnly(fg.deobf(ctDep))
    implementation fg.deobf("mezz.jei:jei-1.18.1:9.1.2.68")
    implementation 'curse.maven:natures-aura-306626:3645315'

    annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.18.1:2.0.0.59'
    annotationProcessor 'com.google.code.gson:gson:2.8.6'
    annotationProcessor 'org.reflections:reflections:0.9.10'
    annotationProcessor mcDep
    annotationProcessor ctDep
}

repositories {
    mavenLocal()
    maven { // Forge
        name 'Forge'
        url 'https://files.minecraftforge.net/maven'
    }
    maven { // JEI
        name 'Prog Maven'
        url 'https://dvs1.progwml6.com/files/maven'
    }
	maven {
		name 'Industrial Foregoing'
        url 'https://cdn.hrzn.studio/maven/'
    }
    maven {
        name 'crafttweaker and jei'
        url 'https://maven.blamejared.com'
    }
	maven {
		name 'cursemaven'
        url "https://cfa2.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    mavenCentral()
}

jar {
    manifest {
        attributes([
            "Specification-Title": "NaturesAuraTweaker",
            "Specification-Vendor": "Mrthomas20121",
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": project.version,
            "Implementation-Vendor" :"naturesaura_tweaker",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')
